I have no ideea what i did

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <header>
+    <!-- <header>
         <nav>
             <ul>
                 <li class="nav-bar"><a href="index.html"><img class="hero-logo" src="assets/images/logoRossi.jpg" alt=""></a></li>
@@ -20,7 +20,20 @@
                 
             </ul>
         </nav>
-    </header>
+    </header> -->
+    <nav class="navbar">
+        <div class="navbar-left">
+          <img class="logo" src="assets/images/logoRossi.jpg" alt="Logo">
+        </div>
+        <div class="navbar-right">
+          <div class="menu">  
+            <a href="index.html">Menu</a>
+          </div>
+          <div class="story">
+            <a href="story.html">Story</a>
+          </div>
+        </div>
+      </nav>
     <div class="header1">
         <div class="w3-content w3-section">
             <div class="img-background " id="">
