Fixing the layout for mobile view of the nav bar

--- a/index.html
+++ b/index.html
@@ -11,32 +11,22 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <!-- <header>
-        <nav>
-            <ul>
-                <li class="nav-bar"><a href="index.html"><img class="hero-logo" src="assets/images/logoRossi.jpg" alt=""></a></li>
-                <li class="nav-bar"><a href="index.html">Home</a></li>
-                <li class="nav-bar"><a href="story.html">Story</a></li>
-                
-            </ul>
-        </nav>
-    </header> -->
     <nav class="navbar">
         <div class="navbar-left">
           <img class="logo" src="assets/images/logoRossi.jpg" alt="Logo">
         </div>
         <div class="navbar-right">
-          <div class="menu">  
-            <a href="index.html">Menu</a>
+          <div>  
+            <a class="menu" href="index.html">Menu</a>
           </div>
-          <div class="story">
-            <a href="story.html">Story</a>
+          <div>
+            <a class="story" href="story.html">Story</a>
           </div>
         </div>
       </nav>
     <div class="header1">
         <div class="w3-content w3-section">
-            <div class="img-background " id="">
+            <div class="img-background" id="">
                 <img class="mySlides" src="assets/images/doctor1.jpg"  alt="">
                 <img class="mySlides" src="assets/images/doctor5.jpg"  alt="">
                 <img class="mySlides" src="assets/images/doctor3.jpg"  alt="">
