--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Exo:wght@200;400;500;700;800&family=Happy+Monkey&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;900&family=Varela+Round&display=swap" rel="stylesheet">
     <title>Rossi</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -15,6 +16,7 @@
         <div class="navbar-left">
           <img class="logo" src="assets/images/logoRossi.jpg" alt="Logo">
         </div>
+        <h1 class="thankYou">Thank You Valentino</h1>
         <div class="navbar-right">
           <div>  
             <a class="menu" href="index.html">Menu</a>
@@ -24,28 +26,25 @@
           </div>
         </div>
       </nav>
-    <div class="header1">
-        <div class="w3-content w3-section">
-            <div class="img-background" id="">
+        <div class="w3-content">
+            <div class="img-background">
                 <img class="mySlides" src="assets/images/doctor1.jpg"  alt="">
                 <img class="mySlides" src="assets/images/doctor5.jpg"  alt="">
                 <img class="mySlides" src="assets/images/doctor3.jpg"  alt="">
                 <img class="mySlides" src="assets/images/doctor4.jpg"  alt="">
             </div>
-            </div>   
-        </div> 
-    </div>
-    <div id="content">
+        </div>          
+    <div id="content" class="content">
         <div>
             <h1 class="content-text">Welcome to Valentino Rossi's fan page</h1>
         </div>
         <div class="content-img">
             <div>
-                <img class="rossi-ymh" src="assets/images/rossi-yamaha.jpg" alt="">
+                <img class="rossi-img" src="assets/images/rossi-yamaha.jpg" alt="">
                 <a href="story.html"><button class="rossi-btn"> Read More</button></a>
             </div>
             <div>
-                <img class="rossi-pit" src="assets/images/1012321.jpg" alt="">
+                <img class="rossi-img" src="assets/images/1012321.jpg" alt="">
             </div>
         </div>
     </div>
