--- a/story.html
+++ b/story.html
@@ -5,22 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Exo:wght@200;400;500;700;800&family=Happy+Monkey&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;900&family=Varela+Round&display=swap" rel="stylesheet">
     <title>Rossi</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li class="nav-bar"><a href="index.html"><img class="hero-logo" src="assets/images/logoRossi.jpg" alt=""></a></li>
-                <li class="nav-bar"><a href="index.html">Home</a></li>
-                <li class="nav-bar"><a href="story.html">Story</a></li>
-                
-            </ul>
-        </nav>
-    </header>
+    <nav class="navbar">
+        <div class="navbar-left">
+          <img class="logo" src="assets/images/logoRossi.jpg" alt="Logo">
+        </div>
+        <div class="navbar-right">
+          <div>  
+            <a class="menu" href="index.html">Menu</a>
+          </div>
+          <div>
+            <a class="story" href="story.html">Story</a>
+          </div>
+        </div>
+      </nav>
     <div class="header1">
         <div class="w3-content w3-section">
             <div class="img-background " id="">
